--- a/dashboard.html
+++ b/dashboard.html
@@ -129,7 +129,7 @@
         
         <nav class="main-nav">
             <!-- Tempat / Home -->
-            <a href="home.html" class="nav-item active">
+            <a href="index.html" class="nav-item active">
                 <i class="fas fa-home"></i> Tempat
             </a>
             <!-- About -->
@@ -167,4 +167,5 @@
 </div>
 
 </body>
+
 </html>
